--- a/Assignment 3/code_id_idf/get_and_store_data.ipynb
+++ b/Assignment 3/code_id_idf/get_and_store_data.ipynb
@@ -57,7 +57,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.0.165:4042\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.0.206:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -98,7 +98,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.0.165:4042\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.0.206:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -114,7 +114,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x2a9ead07248>"
+       "<pyspark.sql.session.SparkSession at 0x1d9c8d735c8>"
       ]
      },
      "execution_count": 4,
@@ -162,16 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssc = StreamingContext(sc, 2000)"
+    "ssc = StreamingContext(sc, 5000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -192,204 +192,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "========= 2021-04-22 10:26:40 =========\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-10:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\lenne\\Anaconda3\\lib\\threading.py\", line 926, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"<ipython-input-2-19fbf29765bb>\", line 9, in run\n",
-      "    ssc.awaitTermination()\n",
-      "  File \"C:\\Users\\lenne\\Desktop\\spark\\spark-3.1.1-bin-hadoop2.7\\python\\pyspark\\streaming\\context.py\", line 199, in awaitTermination\n",
-      "    self._jssc.awaitTermination()\n",
-      "  File \"C:\\Users\\lenne\\Desktop\\spark\\spark-3.1.1-bin-hadoop2.7\\python\\lib\\py4j-0.10.9-src.zip\\py4j\\java_gateway.py\", line 1305, in __call__\n",
-      "    answer, self.gateway_client, self.target_id, self.name)\n",
-      "  File \"C:\\Users\\lenne\\Desktop\\spark\\spark-3.1.1-bin-hadoop2.7\\python\\pyspark\\sql\\utils.py\", line 111, in deco\n",
-      "    return f(*a, **kw)\n",
-      "  File \"C:\\Users\\lenne\\Desktop\\spark\\spark-3.1.1-bin-hadoop2.7\\python\\lib\\py4j-0.10.9-src.zip\\py4j\\protocol.py\", line 328, in get_return_value\n",
-      "    format(target_id, \".\", name), value)\n",
-      "py4j.protocol.Py4JJavaError: An error occurred while calling o155.awaitTermination.\n",
-      ": org.apache.spark.SparkException: An exception was raised by Python:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\lenne\\Desktop\\spark\\spark-3.1.1-bin-hadoop2.7\\python\\pyspark\\streaming\\util.py\", line 68, in call\n",
-      "    r = self.func(t, *rdds)\n",
-      "  File \"<ipython-input-6-b736135f0539>\", line 13, in process\n",
-      "    df.show()\n",
-      "  File \"C:\\Users\\lenne\\Desktop\\spark\\spark-3.1.1-bin-hadoop2.7\\python\\pyspark\\sql\\dataframe.py\", line 484, in show\n",
-      "    print(self._jdf.showString(n, 20, vertical))\n",
-      "  File \"C:\\Users\\lenne\\Desktop\\spark\\spark-3.1.1-bin-hadoop2.7\\python\\lib\\py4j-0.10.9-src.zip\\py4j\\java_gateway.py\", line 1305, in __call__\n",
-      "    answer, self.gateway_client, self.target_id, self.name)\n",
-      "  File \"C:\\Users\\lenne\\Desktop\\spark\\spark-3.1.1-bin-hadoop2.7\\python\\pyspark\\sql\\utils.py\", line 111, in deco\n",
-      "    return f(*a, **kw)\n",
-      "  File \"C:\\Users\\lenne\\Desktop\\spark\\spark-3.1.1-bin-hadoop2.7\\python\\lib\\py4j-0.10.9-src.zip\\py4j\\protocol.py\", line 328, in get_return_value\n",
-      "    format(target_id, \".\", name), value)\n",
-      "py4j.protocol.Py4JJavaError: An error occurred while calling o197.showString.\n",
-      ": org.apache.spark.SparkException: Job aborted due to stage failure: Task 9 in stage 13.0 failed 1 times, most recent failure: Lost task 9.0 in stage 13.0 (TID 58) (192.168.0.165 executor driver): org.apache.spark.SparkException: Python worker failed to connect back.\r\n",
-      "\tat org.apache.spark.api.python.PythonWorkerFactory.createSimpleWorker(PythonWorkerFactory.scala:182)\r\n",
-      "\tat org.apache.spark.api.python.PythonWorkerFactory.create(PythonWorkerFactory.scala:107)\r\n",
-      "\tat org.apache.spark.SparkEnv.createPythonWorker(SparkEnv.scala:119)\r\n",
-      "\tat org.apache.spark.api.python.BasePythonRunner.compute(PythonRunner.scala:145)\r\n",
-      "\tat org.apache.spark.api.python.PythonRDD.compute(PythonRDD.scala:65)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.compute(MapPartitionsRDD.scala:52)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.compute(MapPartitionsRDD.scala:52)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.sql.execution.SQLExecutionRDD.compute(SQLExecutionRDD.scala:55)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.compute(MapPartitionsRDD.scala:52)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.compute(MapPartitionsRDD.scala:52)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.compute(MapPartitionsRDD.scala:52)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.compute(MapPartitionsRDD.scala:52)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.scheduler.ResultTask.runTask(ResultTask.scala:90)\r\n",
-      "\tat org.apache.spark.scheduler.Task.run(Task.scala:131)\r\n",
-      "\tat org.apache.spark.executor.Executor$TaskRunner.$anonfun$run$3(Executor.scala:497)\r\n",
-      "\tat org.apache.spark.util.Utils$.tryWithSafeFinally(Utils.scala:1439)\r\n",
-      "\tat org.apache.spark.executor.Executor$TaskRunner.run(Executor.scala:500)\r\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\r\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\r\n",
-      "\tat java.lang.Thread.run(Thread.java:748)\r\n",
-      "Caused by: java.net.SocketTimeoutException: Accept timed out\r\n",
-      "\tat java.net.DualStackPlainSocketImpl.waitForNewConnection(Native Method)\r\n",
-      "\tat java.net.DualStackPlainSocketImpl.socketAccept(DualStackPlainSocketImpl.java:135)\r\n",
-      "\tat java.net.AbstractPlainSocketImpl.accept(AbstractPlainSocketImpl.java:409)\r\n",
-      "\tat java.net.PlainSocketImpl.accept(PlainSocketImpl.java:199)\r\n",
-      "\tat java.net.ServerSocket.implAccept(ServerSocket.java:545)\r\n",
-      "\tat java.net.ServerSocket.accept(ServerSocket.java:513)\r\n",
-      "\tat org.apache.spark.api.python.PythonWorkerFactory.createSimpleWorker(PythonWorkerFactory.scala:174)\r\n",
-      "\t... 35 more\r\n",
-      "\n",
-      "Driver stacktrace:\r\n",
-      "\tat org.apache.spark.scheduler.DAGScheduler.failJobAndIndependentStages(DAGScheduler.scala:2253)\r\n",
-      "\tat org.apache.spark.scheduler.DAGScheduler.$anonfun$abortStage$2(DAGScheduler.scala:2202)\r\n",
-      "\tat org.apache.spark.scheduler.DAGScheduler.$anonfun$abortStage$2$adapted(DAGScheduler.scala:2201)\r\n",
-      "\tat scala.collection.mutable.ResizableArray.foreach(ResizableArray.scala:62)\r\n",
-      "\tat scala.collection.mutable.ResizableArray.foreach$(ResizableArray.scala:55)\r\n",
-      "\tat scala.collection.mutable.ArrayBuffer.foreach(ArrayBuffer.scala:49)\r\n",
-      "\tat org.apache.spark.scheduler.DAGScheduler.abortStage(DAGScheduler.scala:2201)\r\n",
-      "\tat org.apache.spark.scheduler.DAGScheduler.$anonfun$handleTaskSetFailed$1(DAGScheduler.scala:1078)\r\n",
-      "\tat org.apache.spark.scheduler.DAGScheduler.$anonfun$handleTaskSetFailed$1$adapted(DAGScheduler.scala:1078)\r\n",
-      "\tat scala.Option.foreach(Option.scala:407)\r\n",
-      "\tat org.apache.spark.scheduler.DAGScheduler.handleTaskSetFailed(DAGScheduler.scala:1078)\r\n",
-      "\tat org.apache.spark.scheduler.DAGSchedulerEventProcessLoop.doOnReceive(DAGScheduler.scala:2440)\r\n",
-      "\tat org.apache.spark.scheduler.DAGSchedulerEventProcessLoop.onReceive(DAGScheduler.scala:2382)\r\n",
-      "\tat org.apache.spark.scheduler.DAGSchedulerEventProcessLoop.onReceive(DAGScheduler.scala:2371)\r\n",
-      "\tat org.apache.spark.util.EventLoop$$anon$1.run(EventLoop.scala:49)\r\n",
-      "\tat org.apache.spark.scheduler.DAGScheduler.runJob(DAGScheduler.scala:868)\r\n",
-      "\tat org.apache.spark.SparkContext.runJob(SparkContext.scala:2202)\r\n",
-      "\tat org.apache.spark.SparkContext.runJob(SparkContext.scala:2223)\r\n",
-      "\tat org.apache.spark.SparkContext.runJob(SparkContext.scala:2242)\r\n",
-      "\tat org.apache.spark.sql.execution.SparkPlan.executeTake(SparkPlan.scala:472)\r\n",
-      "\tat org.apache.spark.sql.execution.SparkPlan.executeTake(SparkPlan.scala:425)\r\n",
-      "\tat org.apache.spark.sql.execution.CollectLimitExec.executeCollect(limit.scala:47)\r\n",
-      "\tat org.apache.spark.sql.Dataset.collectFromPlan(Dataset.scala:3696)\r\n",
-      "\tat org.apache.spark.sql.Dataset.$anonfun$head$1(Dataset.scala:2722)\r\n",
-      "\tat org.apache.spark.sql.Dataset.$anonfun$withAction$1(Dataset.scala:3687)\r\n",
-      "\tat org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$5(SQLExecution.scala:103)\r\n",
-      "\tat org.apache.spark.sql.execution.SQLExecution$.withSQLConfPropagated(SQLExecution.scala:163)\r\n",
-      "\tat org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$1(SQLExecution.scala:90)\r\n",
-      "\tat org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:772)\r\n",
-      "\tat org.apache.spark.sql.execution.SQLExecution$.withNewExecutionId(SQLExecution.scala:64)\r\n",
-      "\tat org.apache.spark.sql.Dataset.withAction(Dataset.scala:3685)\r\n",
-      "\tat org.apache.spark.sql.Dataset.head(Dataset.scala:2722)\r\n",
-      "\tat org.apache.spark.sql.Dataset.take(Dataset.scala:2929)\r\n",
-      "\tat org.apache.spark.sql.Dataset.getRows(Dataset.scala:301)\r\n",
-      "\tat org.apache.spark.sql.Dataset.showString(Dataset.scala:338)\r\n",
-      "\tat sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\r\n",
-      "\tat sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\r\n",
-      "\tat sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\r\n",
-      "\tat java.lang.reflect.Method.invoke(Method.java:498)\r\n",
-      "\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\r\n",
-      "\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:357)\r\n",
-      "\tat py4j.Gateway.invoke(Gateway.java:282)\r\n",
-      "\tat py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\r\n",
-      "\tat py4j.commands.CallCommand.execute(CallCommand.java:79)\r\n",
-      "\tat py4j.GatewayConnection.run(GatewayConnection.java:238)\r\n",
-      "\tat java.lang.Thread.run(Thread.java:748)\r\n",
-      "Caused by: org.apache.spark.SparkException: Python worker failed to connect back.\r\n",
-      "\tat org.apache.spark.api.python.PythonWorkerFactory.createSimpleWorker(PythonWorkerFactory.scala:182)\r\n",
-      "\tat org.apache.spark.api.python.PythonWorkerFactory.create(PythonWorkerFactory.scala:107)\r\n",
-      "\tat org.apache.spark.SparkEnv.createPythonWorker(SparkEnv.scala:119)\r\n",
-      "\tat org.apache.spark.api.python.BasePythonRunner.compute(PythonRunner.scala:145)\r\n",
-      "\tat org.apache.spark.api.python.PythonRDD.compute(PythonRDD.scala:65)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.compute(MapPartitionsRDD.scala:52)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.compute(MapPartitionsRDD.scala:52)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.sql.execution.SQLExecutionRDD.compute(SQLExecutionRDD.scala:55)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.compute(MapPartitionsRDD.scala:52)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.compute(MapPartitionsRDD.scala:52)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.compute(MapPartitionsRDD.scala:52)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.compute(MapPartitionsRDD.scala:52)\r\n",
-      "\tat org.apache.spark.rdd.RDD.computeOrReadCheckpoint(RDD.scala:373)\r\n",
-      "\tat org.apache.spark.rdd.RDD.iterator(RDD.scala:337)\r\n",
-      "\tat org.apache.spark.scheduler.ResultTask.runTask(ResultTask.scala:90)\r\n",
-      "\tat org.apache.spark.scheduler.Task.run(Task.scala:131)\r\n",
-      "\tat org.apache.spark.executor.Executor$TaskRunner.$anonfun$run$3(Executor.scala:497)\r\n",
-      "\tat org.apache.spark.util.Utils$.tryWithSafeFinally(Utils.scala:1439)\r\n",
-      "\tat org.apache.spark.executor.Executor$TaskRunner.run(Executor.scala:500)\r\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\r\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\r\n",
-      "\t... 1 more\r\n",
-      "Caused by: java.net.SocketTimeoutException: Accept timed out\r\n",
-      "\tat java.net.DualStackPlainSocketImpl.waitForNewConnection(Native Method)\r\n",
-      "\tat java.net.DualStackPlainSocketImpl.socketAccept(DualStackPlainSocketImpl.java:135)\r\n",
-      "\tat java.net.AbstractPlainSocketImpl.accept(AbstractPlainSocketImpl.java:409)\r\n",
-      "\tat java.net.PlainSocketImpl.accept(PlainSocketImpl.java:199)\r\n",
-      "\tat java.net.ServerSocket.implAccept(ServerSocket.java:545)\r\n",
-      "\tat java.net.ServerSocket.accept(ServerSocket.java:513)\r\n",
-      "\tat org.apache.spark.api.python.PythonWorkerFactory.createSimpleWorker(PythonWorkerFactory.scala:174)\r\n",
-      "\t... 35 more\r\n",
-      "\n",
-      "\r\n",
-      "\tat org.apache.spark.streaming.api.python.TransformFunction.callPythonTransformFunction(PythonDStream.scala:95)\r\n",
-      "\tat org.apache.spark.streaming.api.python.TransformFunction.apply(PythonDStream.scala:78)\r\n",
-      "\tat org.apache.spark.streaming.api.python.PythonDStream$.$anonfun$callForeachRDD$1(PythonDStream.scala:179)\r\n",
-      "\tat org.apache.spark.streaming.api.python.PythonDStream$.$anonfun$callForeachRDD$1$adapted(PythonDStream.scala:179)\r\n",
-      "\tat org.apache.spark.streaming.dstream.ForEachDStream.$anonfun$generateJob$2(ForEachDStream.scala:51)\r\n",
-      "\tat scala.runtime.java8.JFunction0$mcV$sp.apply(JFunction0$mcV$sp.java:23)\r\n",
-      "\tat org.apache.spark.streaming.dstream.DStream.createRDDWithLocalProperties(DStream.scala:417)\r\n",
-      "\tat org.apache.spark.streaming.dstream.ForEachDStream.$anonfun$generateJob$1(ForEachDStream.scala:51)\r\n",
-      "\tat scala.runtime.java8.JFunction0$mcV$sp.apply(JFunction0$mcV$sp.java:23)\r\n",
-      "\tat scala.util.Try$.apply(Try.scala:213)\r\n",
-      "\tat org.apache.spark.streaming.scheduler.Job.run(Job.scala:39)\r\n",
-      "\tat org.apache.spark.streaming.scheduler.JobScheduler$JobHandler.$anonfun$run$1(JobScheduler.scala:256)\r\n",
-      "\tat scala.runtime.java8.JFunction0$mcV$sp.apply(JFunction0$mcV$sp.java:23)\r\n",
-      "\tat scala.util.DynamicVariable.withValue(DynamicVariable.scala:62)\r\n",
-      "\tat org.apache.spark.streaming.scheduler.JobScheduler$JobHandler.run(JobScheduler.scala:256)\r\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\r\n",
-      "\tat java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\r\n",
-      "\tat java.lang.Thread.run(Thread.java:748)\r\n",
-      "\n",
+      "========= 2021-05-11 11:23:20 =========\n",
+      "+----------+-------------------+--------------------+\n",
+      "|     label|           tweet_id|          tweet_text|\n",
+      "+----------+-------------------+--------------------+\n",
+      "|    #china|1392042685905649665|Watch: New batch ...|\n",
+      "|    #china|1392042664007290881|Helicopter explod...|\n",
+      "|    #china|1392042599733547008|#███████'s #█████...|\n",
+      "|#inflation|1392043004152668161|Perspective matte...|\n",
+      "|#inflation|1392043175762534406|76% analysts at P...|\n",
+      "|#inflation|1392043115515506691|𝗗𝗔𝗜𝗟𝗬 𝗕𝗨𝗟...|\n",
+      "|#inflation|1392043363604439041|China's domestic ...|\n",
+      "|#inflation|1392043891310821376|50% analysts at P...|\n",
+      "|    #china|1392044122169434114|The State Council...|\n",
+      "|    #china|1392044077139513344|Congratulations ?...|\n",
+      "|    #china|1392043931827937284|@globaltimesnews ...|\n",
+      "|    #china|1392043914127831047|Chinese Foundry w...|\n",
+      "|#inflation|1392044241132654595|I saw this lumber...|\n",
+      "|#inflation|1392044166830432257|76% analysts at P...|\n",
+      "|    #china|1392044325580664833|Everything has a ...|\n",
+      "|    #china|1392044317536096256|China adds few ba...|\n",
+      "|    #china|1392044306467377154|After huge chunks...|\n",
+      "|    #covid|1392044607245062151|Our carer support...|\n",
+      "|    #covid|1392044590220316672|@campbellclaret o...|\n",
+      "|    #covid|1392044512118075398|Drive a friend. \n",
+      "...|\n",
+      "+----------+-------------------+--------------------+\n",
+      "only showing top 20 rows\n",
       "\n"
      ]
     }
